--- a/src/LetsMeetUp/View/OptionsBar.xaml
+++ b/src/LetsMeetUp/View/OptionsBar.xaml
@@ -16,8 +16,10 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
-        <Image Grid.Column="0" Margin="8" Source="../Assets/Bars.png"/>
+        <Button Grid.Column="0" Opacity="0"/>
+        <Image Grid.Column="0" Margin="8" Source="../Assets/Bars.png" />
         <TextBlock Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Lets Meet Now" FontFamily="Calibri" FontWeight="Bold" Foreground="White" FontSize="42"/>
+        <Button Grid.Column="2" Opacity="0"/>
         <Image Grid.Column="2" Margin="8" Source="../Assets/ChatIcon.png"/>
     </Grid>
 </UserControl>
