--- a/src/LetsMeetUp/MainPage.xaml
+++ b/src/LetsMeetUp/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:LetsMeetUpNs="clr-namespace:LetsMeetUp"
     xmlns:View="clr-namespace:LetsMeetUp.View"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -14,21 +15,24 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-    <Grid>
+    <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <View:OptionsBar Grid.Row="0"/>
-
         <ScrollViewer Grid.Row="1">
-            <ItemsControl >
+            <ItemsControl ItemsSource="{Binding Path=DummyUsers, Source={StaticResource ResourceKey=StaticResources}}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
-                <TextBlock>Hello</TextBlock>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <View:OtherUser/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
     </Grid>
