--- a/src/LetsMeetUp/View/OtherUser.xaml
+++ b/src/LetsMeetUp/View/OtherUser.xaml
@@ -9,14 +9,14 @@
     Foreground="Black"
     Height="175">
 
-    <Border BorderBrush="Black" BorderThickness="1">
+    <Border BorderBrush="#7FD3D3D3" BorderThickness="1">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="175"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button Grid.ColumnSpan ="2" Opacity="0"/>
-            <Image Grid.Column="0"/>
+            <Button Grid.ColumnSpan="2" Opacity="0"/>
+            <Image Grid.Column="0" Source="{Binding Path=ImagePath}"/>
             <StackPanel Margin="{StaticResource PhoneMargin}" Grid.Column="1">
                 <Grid>
                     <TextBlock FontSize="{StaticResource PhoneFontSizeLarge}" FontFamily="{StaticResource PhoneFontFamilySemiBold}" Text="{Binding Path=FirstName}" />
