--- a/src/LetsMeetUp/MainPage.xaml
+++ b/src/LetsMeetUp/MainPage.xaml
@@ -14,40 +14,15 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-        <Grid Margin="{StaticResource PhoneMargin}">
-            <Button/>
-        </Grid>
-        <Grid Background="White">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-            <View:OptionsBar Grid.Row="0"/>
-            <ScrollViewer Grid.Row="1">
-                <StackPanel>
-                    <Line Stretch="Fill" Stroke="#7FD3D3D3" X2="1"/>
-                    <ItemsControl ItemsSource="{Binding Path=DummyUsers, Source={StaticResource ResourceKey=StaticResources}}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <View:OtherUser/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                    <Line Stretch="Fill" Stroke="#7FD3D3D3" X2="1"/>
-                </StackPanel>
-            </ScrollViewer>
-            <View:MessageBar Grid.Row="2"/>
-        </Grid>
-        <Grid Margin="{StaticResource PhoneMargin}">
-            <Button/>
-        </Grid>
-    </StackPanel>
+    <phone:PhoneApplicationPage.Resources>
+        <Storyboard x:Key="MoveLeftAnimation">
+            <DoubleAnimation From="0.0" To="-400.0" Duration="0:0:.25"/>
+        </Storyboard>
+    </phone:PhoneApplicationPage.Resources>
 
+    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+        <View:OptionsControl Width="400"/>
+        <View:MainControl x:Name="Cntrl" OptionsCommand="{Binding OptionsCommand, RelativeSource={RelativeSource Self}}" Width="{Binding ScreenWidth, Source={StaticResource StaticResources}}"/>
+        <View:ChatUsersControl Width="400"/>
+    </StackPanel>
 </phone:PhoneApplicationPage>
